[gd_scene load_steps=2 format=3 uid="uid://c1l4kwoqby01t"]

[ext_resource type="Script" path="res://prog122i.gd" id="1_lfb2a"]

[node name="prog122i" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lfb2a")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 256.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 256.0
offset_right = 512.0
offset_bottom = 384.0
text = "Show"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_right = 576.0
offset_bottom = 384.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 576.0
offset_right = 640.0
offset_bottom = 384.0
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
